feat: repositories added to package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "greenfox-heartbeat",
   "version": "0.2.0",
+  "repository": {
+    "github":"https://github.com/greenfox-academy/huli-heartbeat-nodejs",
+    "npm":"https://www.npmjs.com/package/greenfox-heartbeat"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
