--- a/package.json
+++ b/package.json
@@ -2,17 +2,21 @@
   "name": "greenfox-heartbeat",
   "version": "0.2.0",
   "repository": {
-    "github":"https://github.com/greenfox-academy/huli-heartbeat-nodejs",
-    "npm":"https://www.npmjs.com/package/greenfox-heartbeat"
+    "github": "https://github.com/greenfox-academy/huli-heartbeat-nodejs",
+    "npm": "https://www.npmjs.com/package/greenfox-heartbeat"
   },
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha './test.spec.js'"
   },
   "author": "aholcsik",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.2"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "supertest": "^3.0.0"
   }
 }
